--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="container2">
+    <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
                 <h2>Belize</h2>
